# cv-match-tracker

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/detector/: rfdetr_nano.yaml  rfdetr_small.yaml
configs/sport/: football.yaml
configs/tracker/: bytetrack.yaml
data/: sample_clip_keypoints.json
data/smoke/: README.md  manual_keypoints.json
docs/: DESIGN.md  RUN_LOCAL.md
space/: README.md  app.py  requirements.txt
src/matchtracker/: ball.py  calibrate.py  cli.py  detect.py  ingest.py  metrics.py  pipeline.py  report.py  schemas.py  team.py  track.py
tests/: test_calibrate.py  test_metrics.py  test_schemas.py  test_smoke_e2e.py  test_team.py  test_track.py
