[project]
name = "matchtracker"
version = "0.1.0"
description = "Offline player tracking and post-match statistics for football from a single fixed tactical camera."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alexey", email = "48549027+Happynood@users.noreply.github.com" }]
requires-python = ">=3.11,<3.13"
dependencies = [
  "rfdetr>=1.1.0",
  "supervision>=0.24.0",
  "transformers>=4.45.0",
  "opencv-python-headless>=4.10.0",
  "av>=13.0.0",
  "pandas>=2.2.0",
  "pyarrow>=17.0.0",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "scipy>=1.14.0",
  "pydantic>=2.9.0",
  "jinja2>=3.1.4",
  "matplotlib>=3.9.0",
  "huggingface-hub>=0.25.0",
  "sports @ git+https://github.com/roboflow/sports.git",
  "numba>=0.60.0",
  "llvmlite>=0.43.0",
]

[project.optional-dependencies]
ball = ["sahi>=0.11.20"]
boxmot = ["boxmot>=11.0.0"]
eval = ["motmetrics>=1.4.0"]
dev = [
  "ruff>=0.7.0",
  "pyright>=1.1.383",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
matchtracker = "matchtracker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/matchtracker"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
default-groups = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = ["smoke: CPU end-to-end smoke test using data/smoke/ fixtures"]
